--- a/backend/package.json
+++ b/backend/package.json
@@ -13,5 +13,8 @@
   "dependencies": {
     "express": "^4.19.2",
     "nodemon": "^3.1.0"
+  },
+  "devDependencies": {
+    "mongoose": "^8.3.1"
   }
 }
