--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,8 @@
     "nodemon": "^3.1.0"
   },
   "devDependencies": {
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.1"
   }
 }
