--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,13 @@
   },
   "devDependencies": {
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.5",
+    "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.3.1"
+    "mongoose": "^8.3.1",
+    "passport": "^0.7.0",
+    "passport-discord": "^0.1.4",
+    "passport-github2": "^0.1.12",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
