--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
     "expo": "~50.0.17",
     "expo-status-bar": "~1.11.1",
     "nativewind": "^2.0.11",
