--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0"
   },
   "devDependencies": {
