--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "4.8.2"
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-snap-carousel": "^3.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
