--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "~50.0.17",
     "expo-status-bar": "~1.11.1",
     "nativewind": "^2.0.11",
