make first version of login page and make a backup

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -7,7 +7,7 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/news_load(2).png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
