--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,11 @@
     "expo": "~50.0.17",
     "expo-status-bar": "~1.11.1",
     "nativewind": "^2.0.11",
+    "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-reanimated": "~3.6.2",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-snap-carousel": "^3.9.1"
