--- a/backend/package.json
+++ b/backend/package.json
@@ -11,11 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.10.4",
     "connect-redis": "^7.1.1",
     "express": "^4.19.2",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
-    "redis": "^4.6.13"
+    "redis": "^4.6.13",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "bcryptjs": "^2.4.3",
