--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-responsive-screen": "^1.4.2",
