--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "amqplib": "^0.10.4",
+    "concurrently": "^8.2.2",
     "connect-redis": "^7.1.1",
     "express": "^4.19.2",
+    "newsapi": "^2.4.1",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "redis": "^4.6.13",
