--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,19 +14,20 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "deprecated-react-native-prop-types": "^5.0.0",
-    "expo": "~50.0.17",
-    "expo-status-bar": "~1.11.1",
+    "expo": "~51.0.2",
+    "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
     "react": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-gesture-handler": "~2.14.0",
+    "react-native": "0.74.1",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-modal": "^13.0.1",
     "react-native-onboarding-swiper": "^1.2.0",
-    "react-native-reanimated": "~3.6.2",
+    "react-native-reanimated": "~3.10.1",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "4.8.2",
+    "react-native-safe-area-context": "4.10.1",
     "react-native-snap-carousel": "^3.9.1"
   },
   "devDependencies": {
