--- a/backend/package.json
+++ b/backend/package.json
@@ -6,15 +6,17 @@
   "scripts": {
     "start": "node ./index.js",
     "start:dev": "nodemon ./index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --forceExit"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/jest": "^29.5.12",
     "amqplib": "^0.10.4",
     "concurrently": "^8.2.2",
     "connect-redis": "^7.1.1",
     "express": "^4.19.2",
+    "jest": "^29.7.0",
     "newsapi": "^2.4.1",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
@@ -30,6 +32,10 @@
     "passport": "^0.7.0",
     "passport-discord": "^0.1.4",
     "passport-github2": "^0.1.12",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "supertest": "^7.0.0"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
