--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,8 @@
     "passport": "^0.7.0",
     "passport-discord": "^0.1.4",
     "passport-github2": "^0.1.12",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "supertest": "^7.0.0",
+    "winston": "^3.13.0"
   }
 }
