--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "redis": "^4.6.13",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "winston-mongodb": "^5.1.1"
   },
   "devDependencies": {
     "bcryptjs": "^2.4.3",
