--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,9 @@
     "concurrently": "^8.2.2",
     "connect-redis": "^7.1.1",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.2.0",
+    "express-validator": "^7.1.0",
+    "helmet": "^7.1.0",
     "newsapi": "^2.4.1",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
