--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,8 @@
     "nodemon": "^3.1.0",
     "redis": "^4.6.13",
     "socket.io": "^4.7.5",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "winston-mongodb": "^5.1.1"
   },
   "devDependencies": {
