--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "postinstall": "patch-package",
@@ -10,7 +10,6 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "socket.io-client": "^4.7.5",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
@@ -34,6 +33,5 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "tailwindcss": "3.3.2"
-  },
-  "private": true
+  }
 }
