--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "date-fns": "^3.6.0",
     "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "~51.0.11",
     "expo-status-bar": "~1.12.1",
