--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "postinstall-postinstall": "^2.1.0",
     "react": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-config": "^1.5.2",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "^13.0.1",
