--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,21 +17,21 @@
     "@react-navigation/stack": "^6.3.29",
     "date-fns": "^3.6.0",
     "deprecated-react-native-prop-types": "^5.0.0",
-    "expo": "~51.0.11",
+    "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
     "react": "18.2.0",
-    "react-native": "0.74.2",
+    "react-native": "0.74.5",
     "react-native-config": "^1.5.2",
-    "react-native-gesture-handler": "^2.16.2",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "^13.0.1",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-safe-area-context": "^4.10.9",
     "react-native-shake": "5.5.2",
     "react-native-snap-carousel": "^3.9.1",
     "socket.io-client": "^4.7.5"
